--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.69</version>
         </dependency>
         <dependency>
             <groupId>org.knowm.xchange</groupId>
@@ -101,6 +101,7 @@
                                     <goal>shade</goal>
                                 </goals>
                                 <configuration>
+                                    <minimizeJar>true</minimizeJar>
                                     <shadedArtifactAttached>true</shadedArtifactAttached>
                                     <transformers>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
